# visible-fishbone

./: .env.example  .gitignore  .golangci.yml  .spectral.yaml  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PROGRESS.md  PROPOSAL.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  go.mod  go.sum
bench/: .gitignore  Cargo.toml  README.md
bench/business-report/: competitors.json  generate.go  generate_test.go  inputs.go  markdown.go  render.go  theoretical.json
bench/controlplane/: api_latency.go  api_latency_test.go  capacity_plan.go  capacity_plan_test.go  dryrun.go  graphgen.go  main.go  main_test.go  measure.go  measure_test.go  policy_compile.go  policy_compile_test.go  postgres_scale.go  postgres_scale_integration_test.go  report.go  report_test.go
bench/docs/: multi-queue-throughput.md
bench/efficacy/: .gitignore  Cargo.toml  README.md
bench/efficacy/src/: adversarial.rs  dlp.rs  dns.rs  firewall.rs  firewall_kernel.rs  ips.rs  main.rs  malware.rs  report.rs  swg.rs  wild.rs  ztna.rs
bench/ha-failover/: main.go
bench/profiles/: branch-large.toml  branch-medium.toml  branch-small.toml  cloud-pop-small.toml
bench/profiles/skus/: large.toml  medium.toml  micro.toml  small.toml
bench/results/: branch-large-concurrent-flows-1780920344.json  branch-large-concurrent-flows-1781529930.json  branch-large-concurrent-flows-1782132953.json  branch-large-concurrent-flows-1782734735.json  branch-large-concurrent-flows-1783338172.json  branch-large-concurrent-flows-1783938871.json  branch-large-concurrent-flows-1784542775.json  branch-large-latency-1780920329.json  branch-large-latency-1781529915.json  branch-large-latency-1782132938.json  branch-large-latency-1782734720.json  branch-large-latency-1783338157.json  branch-large-latency-1783938856.json  branch-large-latency-1784542760.json  branch-large-throughput-1780920314.json  branch-large-throughput-1781529900.json  branch-large-throughput-1782132923.json  branch-large-throughput-1782734705.json  branch-large-throughput-1783338142.json  branch-large-throughput-1783938841.json  branch-large-throughput-1784542745.json  branch-medium-concurrent-flows-1780920344.json  branch-medium-concurrent-flows-1781529889.json  branch-medium-concurrent-flows-1782132952.json  branch-medium-concurrent-flows-1782734723.json  branch-medium-concurrent-flows-1783338171.json  branch-medium-concurrent-flows-1783938874.json  branch-medium-concurrent-flows-1784542762.json  branch-medium-latency-1780920329.json  branch-medium-latency-1781529874.json  branch-medium-latency-1782132937.json  branch-medium-latency-1782734708.json  branch-medium-latency-1783338156.json  branch-medium-latency-1783938859.json  branch-medium-latency-1784542747.json  branch-medium-throughput-1780920314.json  branch-medium-throughput-1781529859.json  branch-medium-throughput-1782132922.json  branch-medium-throughput-1782734693.json  branch-medium-throughput-1783338141.json  (+27 more)
bench/src/: business_report.rs  competitor.rs  datapath.rs  lib.rs  main.rs  measurement.rs  multiqueue.rs  report.rs  traffic_gen.rs  wire_scaling.rs
bench/telemetry/: ch_write_rate.go  ch_write_rate_live.go  containers_integration.go  cost_model.go  cost_model_test.go  dedup_throughput.go  gen.go  gen_test.go  ingest_rate.go  ingest_rate_live.go  live_integration_test.go  live_stub.go  live_stub_test.go  main.go  main_test.go  measure.go  measure_test.go  pipeline_e2e.go  pipeline_e2e_live.go  report.go  report_test.go  s3_archive.go  s3_archive_live.go  targets.go
crates/sng-agent/: Cargo.toml  README.md
crates/sng-agent/src/: cli.rs  config.rs  lib.rs  main.rs  posture_map.rs  supervisor.rs  tracing_init.rs
crates/sng-agent/tests/: agent_e2e.rs  agent_supervisor.rs
crates/sng-appid/: Cargo.toml
crates/sng-appid/data/: README.md  catalog.json
crates/sng-appid/src/: catalog.rs  error.rs  features.rs  lib.rs  matcher.rs  signature.rs
crates/sng-comms/: Cargo.toml  README.md
crates/sng-comms/src/: ack.rs  backoff.rs  batch.rs  client.rs  error.rs  identity.rs  lib.rs  policy.rs  spool.rs  telemetry.rs  tls.rs
crates/sng-comms/tests/: integration.rs
crates/sng-core/: Cargo.toml  README.md
crates/sng-core/src/: config.rs  envelope.rs  error.rs  events.rs  ids.rs  lib.rs  lifecycle.rs  policy.rs  restart.rs  supervisor.rs  traffic_class.rs
crates/sng-dem/: Cargo.toml  README.md
crates/sng-dem/src/: error.rs  lib.rs  probe.rs  resolver.rs  result.rs  score.rs  target.rs
crates/sng-dlp/: Cargo.toml  README.md
crates/sng-dlp/assets/: entity_classes.json  ner_v1.featurecheck.json  ner_v1.onnx  ner_v2.featurecheck.json  ner_v2.onnx  train_ner_model.py
crates/sng-dlp/src/: ai_app.rs  channels.rs  classifier.rs  doc_classifier.rs  edm.rs  engine.rs  error.rs  fingerprint.rs  keccak.rs  lib.rs  ml_classifier.rs  policy.rs  rules.rs  validators.rs
crates/sng-dlp/tests/: dlp_efficacy.rs  doc_classifier.rs  ml_classifier.rs
crates/sng-dns/: Cargo.toml  README.md
crates/sng-dns/src/: category.rs  error.rs  filter.rs  lib.rs  managed.rs  qtype.rs  query.rs  reputation.rs  resolver.rs  service.rs  sinkhole.rs  threatintel.rs  tunneling.rs  wire.rs
crates/sng-ebpf/: Cargo.toml  README.md
crates/sng-ebpf/bpf/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/sng-ebpf/src/: class.rs  control.rs  ddos.rs  error.rs  firewall.rs  lib.rs  (+4 more)
crates/sng-edge/: Cargo.toml  README.md
crates/sng-fw/: Cargo.toml  README.md
crates/sng-ha/: Cargo.toml
crates/sng-ips/: Cargo.toml  README.md
crates/sng-mobile-core/: Cargo.toml
crates/sng-mobile-pal-android/: Cargo.toml
crates/sng-mobile-pal-ios/: Cargo.toml
crates/sng-mobile-sdk/: Cargo.toml  README.md
crates/sng-oidc/: Cargo.toml
crates/sng-pal/: Cargo.toml  README.md
crates/sng-policy-eval/: Cargo.toml  README.md
crates/sng-sdwan/: Cargo.toml  README.md
crates/sng-swg/: Cargo.toml  README.md
crates/sng-telemetry/: Cargo.toml  README.md
crates/sng-uniffi-bindgen/: Cargo.toml
crates/sng-updater/: Cargo.toml  README.md
crates/sng-ztna/: Cargo.toml  README.md
(+1960 files in other folders)
